# polly-test

./: LICENSE  NOTICE  README.md  pom.xml
.github/workflows/: publish-p2.yml
bundles/com.emmtrix.isl.core/: build.properties  pom.xml
bundles/com.emmtrix.isl.core/src/main/java/com/emmtrix/isl/core/: IslInvalidArgumentException.java  IslNativeException.java
bundles/com.emmtrix.isl.jni/: build.properties  pom.xml
bundles/com.emmtrix.isl.jni/src/main/c/: isl_jni.c
bundles/com.emmtrix.isl.native.linux.x86_64/: build.properties  pom.xml
bundles/com.emmtrix.isl.native.macosx.aarch64/: pom.xml
bundles/com.emmtrix.isl.native.macosx.aarch64/src/main/resources/native/macosx/aarch64/: libisl_wrapper.dylib
bundles/com.emmtrix.isl.native.win32.x86_64/: pom.xml
native/isl-wrapper/: CMakeLists.txt
native/isl-wrapper/src/: isl_stub.c
scripts/: download_isl.sh
